--- a/MainProject.InMemoryService/MainProject.InMemoryService.csproj
+++ b/MainProject.InMemoryService/MainProject.InMemoryService.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="ServiceStack.Redis.Core" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
