--- a/MainProject.RedisService/MainProject.RedisService.csproj
+++ b/MainProject.RedisService/MainProject.RedisService.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="ServiceStack.Redis.Core" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
