--- a/MainProject.RepositoryService/MainProject.RepositoryService.csproj
+++ b/MainProject.RepositoryService/MainProject.RepositoryService.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="ServiceStack.Redis.Core" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
