Change the controller

--- a/MainProject/MainProject.csproj
+++ b/MainProject/MainProject.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\MainProject.RepositoryService\MainProject.RepositoryService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infra\DecoratorSolution\" />
+  </ItemGroup>
+
 </Project>
